--- a/public/index.html
+++ b/public/index.html
@@ -196,6 +196,11 @@
         box-shadow: 0 6px 20px rgba(17, 153, 142, 0.4);
       }
 
+      .file-input-wrapper:hover {
+        transition: all 0.3s ease;
+        transform: translateY(-2px);
+      }
+
       .file-input-wrapper:has(input:disabled) .file-input-label {
         opacity: 0.6;
         cursor: not-allowed;
