feat: Update device configuration interface and add lever monitoring functionality
- Replaced existing configuration buttons with new lever control buttons: "重置摇杆", "读取摇杆信息", and "开启实时监控".
- Changed section title from "设备信息" to "设备状态".
- Implemented lever monitoring with start/stop functionality.
- Added functions to reset the lever and read lever information, including detailed status updates.
- Enhanced HID communication handling with a unified approach for sending and receiving reports.

--- a/public/index.html
+++ b/public/index.html
@@ -467,15 +467,16 @@
           <div class="section">
             <h3>⚙️ 设备配置</h3>
             <div class="button-group">
-              <input type="button" value="读取配置" id="ReadConfig" />
-              <input type="button" value="写入配置" id="WriteConfig" />
-              <input type="button" value="重置设备" id="ResetDevice" />
+              <input type="button" value="重置摇杆" id="ResetLeverBtn" />
+              <input type="button" value="读取摇杆信息" id="ReadLeverInfoBtn" />
+              <input type="button" value="开启实时监控" id="ToggleMonitorBtn" />
+              <!-- <input type="button" value="重置设备" id="ResetDevice" /> -->
             </div>
             <div id="ConfigOperationStatus" class="status"></div>
           </div>
 
           <div class="section">
-            <h3>📊 设备信息</h3>
+            <h3>📊 设备状态</h3>
             <div id="DeviceInfo" style="background: #f8f9fa; padding: 15px; border-radius: 8px; font-family: monospace; font-size: 14px; line-height: 1.6;">
               未连接设备
             </div>
