--- a/public/index.html
+++ b/public/index.html
@@ -316,7 +316,7 @@
       .tab-nav {
         display: flex;
         background: #f8f9fa;
-        border-bottom: 3px solid #dee2e6;
+        border-bottom: 2px solid #dee2e6;
       }
 
       .tab-button {
@@ -344,7 +344,7 @@
       .tab-button.active {
         background: white;
         color: #4facfe;
-        border-bottom: 3px solid #4facfe;
+        /* border-bottom: 3px solid #4facfe; */
       }
 
       .tab-button.active::after {
