feat: 添加灯光测试功能，增强设备控制体验

--- a/public/index.html
+++ b/public/index.html
@@ -518,6 +518,7 @@
                   value="开启实时监控"
                   id="ToggleMonitorBtn"
                 />
+                <input type="button" value="灯光测试" id="LightTestBtn" />
             </div>
             <div class="button-group">
                 <input type="button" value="保存配置" id="SaveConfigBtn" />
